--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
         font-weight: normal;
         font-style: normal;
         src: url("Bankiros%20Awards_files/iconfont.woff2") format("woff2"),
-        url("/fonts/iconfont/iconfont.woff") format("woff"),
-        url("/fonts/iconfont/iconfont.ttf") format("truetype");
+        url("Bankiros%20Awards_files/iconfont.woff") format("woff"),
+        url("Bankiros%20Awards_files/iconfont.ttf") format("truetype");
     }
 
     html, body {
