--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@
                     </div>
                 </div>
 
-                <div class="block-text-img__item block-text-img__item--img">
+                <div class="block-text-img__item block-text-img__item--img" data-js-anim="">
                     <video muted="muted" loop="loop">
-                        <source src="Bankiros%20Awards_files/logo.mp4" type="video/mp4">
-                        <source src="Bankiros%20Awards_files/logo.webm" type="video/webm">
+                        <source src="Bankiros%20Awards_files/award.mp4" type="video/mp4">
+                        <source src="Bankiros%20Awards_files/award.webm" type="video/webm">
                     </video>
 <!--                    <img class="img-responsive" src="images/previews/preview-award.png" alt="BANKIROS AWARDS">-->
                 </div>
