--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
                     <div class="about-counter about-counter--on-mainpage about-counter--anim" data-js-anim="">
                         <div class="about-counter__item">
-                            <div class="about-counter__timer"><span data-js="about-counter">90000</span> +</div>
+                            <div class="about-counter__timer"><span data-js="about-counter">9000000</span> +</div>
                             <div class="about-counter__description">пользователей в месяц</div>
                         </div>
                         <div class="about-counter__item">
