--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 <meta itemprop="description" content="Премия Bankiros Awards">
 <meta itemprop="image" content="http://awards.bamkiros.lcl/images/logo-share.jpg">
     <title>Bankiros Awards</title>
-    <link rel="preload" href="Bankiros%20Awards_files/main-page.css" as="style">
-    <link rel="stylesheet" href="Bankiros%20Awards_files/main-page.css">
+    <link rel="preload" href="files/main-page.css" as="style">
+    <link rel="stylesheet" href="files/main-page.css">
 
-    <link rel="preload" href="Bankiros%20Awards_files/roboto-regular.woff2" as="font" crossorigin="">
-<link rel="preload" href="Bankiros%20Awards_files/roboto-bold.woff2" as="font" crossorigin="">
-<link rel="preload" href="Bankiros%20Awards_files/roboto-light.woff2" as="font" crossorigin="">
-<link rel="preload" href="Bankiros%20Awards_files/DINCondensed-Light.woff2" as="font" crossorigin="">
-<link rel="preload" href="Bankiros%20Awards_files/iconfont.woff2" as="font" crossorigin="">
+    <link rel="preload" href="files/roboto-regular.woff2" as="font" crossorigin="">
+<link rel="preload" href="files/roboto-bold.woff2" as="font" crossorigin="">
+<link rel="preload" href="files/roboto-light.woff2" as="font" crossorigin="">
+<link rel="preload" href="files/DINCondensed-Light.woff2" as="font" crossorigin="">
+<link rel="preload" href="files/iconfont.woff2" as="font" crossorigin="">
 
 
 <style>
@@ -39,8 +39,8 @@
         font-weight: 300;
         font-display: swap;
         src: local(''),
-        url('Bankiros%20Awards_files/roboto-light.woff2') format('woff2'),
-        url('/fonts/roboto/roboto-light.woff') format('woff');
+        url('files/roboto-light.woff2') format('woff2'),
+        url('filesroboto-light.woff') format('woff');
     }
     @font-face {
         font-family: 'Roboto';
@@ -48,8 +48,8 @@
         font-weight: 400;
         font-display: swap;
         src: local(''),
-        url('Bankiros%20Awards_files/roboto-regular.woff2') format('woff2'),
-        url('/fonts/roboto/roboto-regular.woff') format('woff');
+        url('files/roboto-regular.woff2') format('woff2'),
+        url('files/roboto-regular.woff') format('woff');
     }
 
     @font-face {
@@ -58,8 +58,8 @@
         font-weight: 700;
         font-display: swap;
         src: local(''),
-        url('Bankiros%20Awards_files/roboto-bold.woff2') format('woff2'),
-        url('/fonts/roboto/roboto-bold.woff') format('woff');
+        url('files/roboto-bold.woff2') format('woff2'),
+        url('files/roboto-bold.woff') format('woff');
     }
 
     @font-face {
@@ -68,19 +68,20 @@
         font-weight: 400;
         font-display: swap;
         src: local(''),
-        url('Bankiros%20Awards_files/DINCondensed-Light.woff2') format('woff2'),
-        url('/fonts/din-condensed/DINCondensed-Light.woff') format('woff');
+        url('files/DINCondensed-Light.woff2') format('woff2'),
+        url('files/DINCondensed-Light.woff') format('woff');
     }
 
 
     @font-face {
-        font-family: iconfont;
+        font-family: "iconfont";
         font-display: swap;
         font-weight: normal;
         font-style: normal;
-        src: url("Bankiros%20Awards_files/iconfont.woff2") format("woff2"),
-        url("Bankiros%20Awards_files/iconfont.woff") format("woff"),
-        url("Bankiros%20Awards_files/iconfont.ttf") format("truetype");
+        src:  url("files/iconfont.eot"),
+        url("files/iconfont.woff2") format("woff2"),
+        url("files/iconfont.woff") format("woff"),
+        url("files/iconfont.ttf") format("truetype");
     }
 
     html, body {
@@ -127,7 +128,7 @@
     <div class="container">
         <div class="header__in">
             <div class="header__img">
-                <img src="Bankiros%20Awards_files/logo-full.svg" alt="Bankiros Awards">
+                <img src="files/logo-full.svg" alt="Bankiros Awards">
             </div>
             <nav class="main-menu">
                 <button class="main-menu__btn"></button>
@@ -161,8 +162,8 @@
 
                 <div class="block-text-img__item block-text-img__item--img" data-js-anim="">
                     <video muted="muted" loop="loop">
-                        <source src="Bankiros%20Awards_files/award.mp4" type="video/mp4">
-                        <source src="Bankiros%20Awards_files/award.webm" type="video/webm">
+                        <source src="files/award.mp4" type="video/mp4">
+                        <source src="files/award.webm" type="video/webm">
                     </video>
 <!--                    <img class="img-responsive" src="images/previews/preview-award.png" alt="BANKIROS AWARDS">-->
                 </div>
@@ -175,8 +176,8 @@
             <div class="block-text-img mob:block-text-img__item--text-top">
                 <div class="block-text-img__item block-text-img__item--img" data-js-anim="">
                     <video muted="muted" loop="loop">
-                        <source src="Bankiros%20Awards_files/logo.mp4" type="video/mp4">
-                        <source src="Bankiros%20Awards_files/logo.webm" type="video/webm">
+                        <source src="files/logo.mp4" type="video/mp4">
+                        <source src="files/logo.webm" type="video/webm">
                     </video>
                 </div>
                 <div class="block-text-img__item block-text-img__item--text block-text-img__item--sticky mob:block-text-img__item--dark-gradient">
@@ -226,12 +227,12 @@
         </div>
     </div>
 </footer>
-<script src="Bankiros%20Awards_files/jquery-3.js"></script>
-<script src="Bankiros%20Awards_files/global.js"></script>
-<script src="Bankiros%20Awards_files/footer.js"></script>
+<script src="files/jquery-3.js"></script>
+<script src="files/global.js"></script>
+<script src="files/footer.js"></script>
 
-<script src="Bankiros%20Awards_files/about-counter.js"></script>
-<script src="Bankiros%20Awards_files/animation.js"></script>
+<script src="files/about-counter.js"></script>
+<script src="files/animation.js"></script>
 
 
 
