--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         font-display: swap;
         src: local(''),
         url('files/roboto-light.woff2') format('woff2'),
-        url('filesroboto-light.woff') format('woff');
+        url('files/roboto-light.woff') format('woff');
     }
     @font-face {
         font-family: 'Roboto';
