--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 </div>
 
                 <div class="block-text-img__item block-text-img__item--img" data-js-anim="">
-                    <video muted="muted" loop="loop">
+                    <video muted="muted" playsinline loop="loop" controls>
                         <source src="files/award.mp4" type="video/mp4">
                         <source src="files/award.webm" type="video/webm">
                     </video>
