--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <div class="container">
             <div class="block-text-img mob:block-text-img__item--text-top">
                 <div class="block-text-img__item block-text-img__item--img" data-js-anim="">
-                    <video muted="muted" loop="loop">
+                    <video muted="muted" playsinline loop="loop">
                         <source src="files/logo.mp4" type="video/mp4">
                         <source src="files/logo.webm" type="video/webm">
                     </video>
