--- a/index.html
+++ b/index.html
@@ -161,11 +161,11 @@
                 </div>
 
                 <div class="block-text-img__item block-text-img__item--img" data-js-anim="">
-                    <video muted="muted" playsinline loop="loop" controls>
+                    <video muted="muted" playsinline loop="loop">
                         <source src="files/award.mp4" type="video/mp4">
                         <source src="files/award.webm" type="video/webm">
                     </video>
-<!--                    <img class="img-responsive" src="images/previews/preview-award.png" alt="BANKIROS AWARDS">-->
+                    <img class="img-responsive block-text-img__preview" src="files/award.jpg" alt="BANKIROS AWARDS">
                 </div>
             </div>
         </div>
@@ -179,6 +179,7 @@
                         <source src="files/logo.mp4" type="video/mp4">
                         <source src="files/logo.webm" type="video/webm">
                     </video>
+                    <img class="img-responsive block-text-img__preview" src="files/award.jpg" alt="BANKIROS LOGO">
                 </div>
                 <div class="block-text-img__item block-text-img__item--text block-text-img__item--sticky mob:block-text-img__item--dark-gradient">
                     <h2 class="block-text-img__title gold h1">ОБ ОРГАНИЗАТОРЕ</h2>
