--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 
     <meta name="description" content="Премия Bankiros Awards">
 
+    <link rel="apple-touch-icon" sizes="180x180" href="files/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="files/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="files/favicon/favicon-16x16.png">
+    <link rel="manifest" href="files/favicon/site.webmanifest">
+    <link rel="mask-icon" href="files/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
 <meta property="og:title" content="Премия Bankiros Awards">
 <meta property="og:description" content="Премия Bankiros Awards">
 <meta property="og:image" content="http://awards.bamkiros.lcl/images/logo-share.jpg">
@@ -179,7 +187,7 @@
                         <source src="files/logo.mp4" type="video/mp4">
                         <source src="files/logo.webm" type="video/webm">
                     </video>
-                    <img class="img-responsive block-text-img__preview" src="files/award.jpg" alt="BANKIROS LOGO">
+                    <img class="img-responsive block-text-img__preview" src="files/logo.jpg" alt="BANKIROS LOGO">
                 </div>
                 <div class="block-text-img__item block-text-img__item--text block-text-img__item--sticky mob:block-text-img__item--dark-gradient">
                     <h2 class="block-text-img__title gold h1">ОБ ОРГАНИЗАТОРЕ</h2>
