--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <meta itemprop="image" content="http://awards.bamkiros.lcl/images/logo-share.jpg">
     <title>Bankiros Awards</title>
     <link rel="preload" href="files/main-page.css" as="style">
-    <link rel="stylesheet" href="files/main-page.css">
+    <link rel="stylesheet" href="files/main-page.css?v=1">
 
     <link rel="preload" href="files/roboto-regular.woff2" as="font" crossorigin="">
 <link rel="preload" href="files/roboto-bold.woff2" as="font" crossorigin="">
